--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+reqwest = { version = "0.12.4" }
 dotenv = "0.15.0"
 open = "5.1.3"
+tokio = { version = "1.38.0", features = ["full"] }
